Fix Firefox presentation overflow issue

--- a/app/templates/src/styles/main.styl
+++ b/app/templates/src/styles/main.styl
@@ -17,6 +17,7 @@
   left: 0
   right: 0
   bottom: 0
+  overflow: hidden
 
 .bespoke-scale-parent
   position: absolute
